# Irodori-TTS-Server

./: .env.example  README.md  pyproject.toml
src/irodori_openai_tts/: app.py
