[project]
name = "irodori-tts-server"
version = "0.1.0"
description = "OpenAI-compatible inference API server for Irodori-TTS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "huggingface-hub>=0.34.0,<1.0",
    "irodori-tts @ git+https://github.com/Aratako/Irodori-TTS.git",
    "openai>=2.44.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "soundfile>=0.13.1",
    "torch>=2.10.0,<2.11.0",
    "torchaudio>=2.10.0,<2.11.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.10.0,<2.11.0",
    "torchaudio>=2.10.0,<2.11.0",
]
cu128 = [
    "torch>=2.10.0,<2.11.0",
    "torchaudio>=2.10.0,<2.11.0",
]
rocm = [
    "torch>=2.10.0,<2.11.0",
    "torchaudio>=2.10.0,<2.11.0",
    "pytorch-triton-rocm>=3.5.1; sys_platform == 'linux'",
    "triton-rocm>=3.6.0; sys_platform == 'linux'",
]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
irodori-openai-tts = "irodori_openai_tts.__main__:main"

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "rocm" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["irodori_openai_tts", "irodori_tts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
